# graphiti-mcp

./: .env.example  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  README_DOCKER.md  README_zh.md  TESTING_GUIDE.md  docker-compose.yml  graphiti_mcp_server.py  mcp_config_http_exampl.json  mcp_config_http_example.json  mcp_config_sse_example.json  pyproject.toml
.github/workflows/: docker-image.yml
