[project]
name = "graphiti-mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server - A Model Context Protocol server for Graphiti knowledge graphs"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "fastmcp>=2.0.0",
    "openai>=1.68.2",
    "graphiti-core>=0.14.0",
    "azure-identity>=1.21.0",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.0.0",
]

